# src/modules/pipeline/dto/create-pipeline.dto.ts
@@ -1,0 +1,14 @@
+import { OmitType } from "@nestjs/swagger";
+
+import { Pipeline } from "../model/pipeline.model";
+
+export class CreatePipelineDto extends OmitType(Pipeline, [
+  "id",
+  "createdAt",
+  "updatedAt",
+] as const) {
+  constructor(data?: CreatePipelineDto) {
+    super();
+    if (data) Object.assign(this, data);
+  }
+}
